--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -58,7 +58,17 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
+window.addEventListener('keydown', playNotes)
+function playNotes(e)
+{
+  const audio = document.querySelector(`audio[data-key='${e.keyCode}']`);
+  const keys = document.querySelector(`div[data-key='${e.keyCode}']`);
 
+  if(!audio) return;
+  audio.currentTime = 0;
+  audio.play();
+  keys.classList.add('playing');
+}
 </script>
 
 
