--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -62,12 +62,21 @@ window.addEventListener('keydown', playNotes)
 function playNotes(e)
 {
   const audio = document.querySelector(`audio[data-key='${e.keyCode}']`);
-  const keys = document.querySelector(`div[data-key='${e.keyCode}']`);
+  const key = document.querySelector(`div[data-key='${e.keyCode}']`);
 
   if(!audio) return;
   audio.currentTime = 0;
   audio.play();
-  keys.classList.add('playing');
+  key.classList.add('playing');
+}
+
+const keys = document.querySelectorAll('.key');
+keys.forEach(key => key.addEventListener('transitionend', transition))
+
+function transition(e)
+{
+  if (e.propertyName !== 'transform') return;
+  this.classList.remove('playing');
 }
 </script>
 
