--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -26,15 +26,28 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    const oneAt19 = people.some(person => ((new Date()).getFullYear() - person.year) >= 19)
+    console.log(oneAt19);
     // Array.prototype.every() // is everyone 19 or older?
+    const isAll19 = people.every(person => ((new Date()).getFullYear() - person.year) >= 19)
+    console.log(isAll19);
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+    const withId = comments.find(title => title.id === 823423)
+    console.log(withId);
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+    const findDelete = comments.findIndex(title => title.id === 823423)
+    //comments.splice(findDelete, 1);
+    const newArr = [
+      ...comments.slice(0, findDelete),
+      ...comments.slice(findDelete + 1)
+    ];
+    console.table(newArr);    
 
   </script>
 </body>
